gen swagger doc; some refactoring
